--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ dependencies = [
     "nut2>=0.4.0",
     "configparser>=5.0.0",
     "gunicorn>=21.2.0",
+    "apscheduler>=3.10.0",
+    "flask-socketio>=5.3.0",
+    "eventlet>=0.33.0",
 ]
 
 [build-system]
